--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700" rel="stylesheet" />
 
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Web site created by Shivam" />
   <link rel="apple-touch-icon" href="logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
